# rate_limiter

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  compose.yaml  conftest.py  example.env  pyproject.toml
.github/workflows/: tests.yml
src/rate_limiter/: main.py  settings.py  storage.py
tests/: locustfile.py  test_main.py
