[tool.poetry]
name = "rate-limiter"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "rate_limiter", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
uvicorn = "^0.27.1"
redis = "^5.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mypy = "^1.8.0"
httpx = "^0.27.0"
coverage = "^7.4.3"
trio = "^0.24.0"
locust = "^2.24.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
